; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_dasm_read_imm_8.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_dasm_read_imm_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_rawop = common dso_local global i32* null, align 8
@g_cpu_pc = common dso_local global i32 0, align 4
@g_rawbasepc = common dso_local global i32 0, align 4
@g_address_mask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @dasm_read_imm_8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dasm_read_imm_8(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32*, i32** @g_rawop, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %15

6:                                                ; preds = %1
  %7 = load i32*, i32** @g_rawop, align 8
  %8 = load i32, i32* @g_cpu_pc, align 4
  %9 = add nsw i32 %8, 1
  %10 = load i32, i32* @g_rawbasepc, align 4
  %11 = sub nsw i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %7, i64 %12
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @g_cpu_pc, align 4
  %17 = load i32, i32* @g_address_mask, align 4
  %18 = and i32 %16, %17
  %19 = call i32 @m68k_read_disassembler_16(i32 %18)
  %20 = and i32 %19, 65535
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %15, %6
  %22 = load i32, i32* %2, align 4
  %23 = load i32, i32* @g_cpu_pc, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* @g_cpu_pc, align 4
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @m68k_read_disassembler_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
